--- a/src/scss/components/allproduct.scss
+++ b/src/scss/components/allproduct.scss
@@ -9,11 +9,13 @@
 .product-hero__title {
   text-align: start;
   width: 100%;
-  height: auto;
+  height: 100%;
+  position: relative;
 }
 
 .product-hero__title h1 {
   position: absolute;
+  inset: 0;
   width: 100%;
   bottom: 0;
   color: #fff;
@@ -27,6 +29,7 @@
   letter-spacing: clamp(-1px, -1vw, -6px);
   letter-spacing: -6px;
   padding: 64px 164px;
+  align-self: flex-end;
 }
 
 @media (max-width: 576px) {
@@ -110,10 +113,13 @@
   width: 100%;
   padding: 15px 0;
   border-radius: 8px;
-  border: 1px solid #848484;
+
   background: #f7f7f8;
 }
 
+.cate__item--active {
+  border: 1px solid #848484;
+}
 .cate__item img {
   max-height: 78px;
   padding: 0 13px;
@@ -373,11 +379,16 @@
 // ================================
 
 .frame,
-.frame-wrapper,
 .frame__content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
+  align-items: center;
+}
+
+.frame-wrapper {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -394,6 +405,8 @@
 
 .frame__title {
   color: var(--Text, #000);
+  padding-top: 11px;
+  padding-bottom: 6px;
   text-align: center;
   font-family: var(--Body-font-family, "be vietnam pro");
   font-size: var(--Body-font-size-body-Md, 16px);
