--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2506,6 +2506,10 @@ select option {
   gap: 36px;
 }
 
+.faq__body {
+  width: 100%;
+}
+
 .faq__tittle {
   text-align: center;
   color: var(--Text, #1e1e1e);
