--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -1,5 +1,60 @@
 .btn-sa {
   background-color: rgba(15, 97, 255, 1);
-  // padding: 16px 24px;
   border-radius: 56px;
 }
+
+.btn-sa {
+  $btn-color: rgba(15, 97, 255, 1);
+  $btn-hover-color: #fff;
+  border-color: $btn-color;
+  color: $btn-color;
+  transition: all 1s ease;
+  &:hover {
+    box-shadow: inset 5em 0 0 0 $btn-hover-color,
+      inset -5em 0 0 0 $btn-hover-color;
+    border-color: $btn-color;
+    color: $btn-color;
+    transform: scale(1.2);
+  }
+  &:hover a {
+    // box-shadow: inset 5em 0 0 0 $btn-hover-color,
+    //   inset -5em 0 0 0 $btn-hover-color;
+    border-color: $btn-color;
+    color: $btn-color;
+  }
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+// a {
+//   text-decoration: none;
+//   color: black;
+// }
+// .button-list {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-around;
+//   padding: 50px;
+// }
+
+// $border-radius: 5px;
+
+// .btn-click {
+//   display: flex;
+//   width: fit-content;
+//   height: 40px;
+//   justify-content: center;
+//   align-items: center;
+//   margin: 0.5rem;
+//   line-height: 35px;
+//   border: 1px solid;
+//   border-radius: $border-radius;
+//   text-align: center;
+//   font-size: 16px;
+//   color: #000;
+//   text-decoration: none;
+//   transition: all 0.35s;
+//   box-sizing: border-box;
+// }
