--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -73,6 +73,26 @@ a:hover {
   border-radius: 56px;
 }
 
+.btn-sa {
+  border-color: rgb(15, 97, 255);
+  color: rgb(15, 97, 255);
+  transition: all 1s ease;
+}
+.btn-sa:hover {
+  box-shadow: inset 5em 0 0 0 #fff, inset -5em 0 0 0 #fff;
+  border-color: rgb(15, 97, 255);
+  color: rgb(15, 97, 255);
+  transform: scale(1.2);
+}
+.btn-sa:hover a {
+  border-color: rgb(15, 97, 255);
+  color: rgb(15, 97, 255);
+}
+
+a:hover {
+  cursor: pointer;
+}
+
 .page-header {
   width: 100vw;
   background-color: transparent;
@@ -101,8 +121,7 @@ a:hover {
   overflow: hidden;
   justify-content: space-between;
   align-items: center;
-  width: 42.55%;
-  height: 70px;
+  min-width: 42.55%;
   padding: 0 35px;
   border-radius: 54px;
   background-color: #f6f6f6;
@@ -138,6 +157,12 @@ a:hover {
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+  position: relative;
+}
+
+.nav-list a:hover {
+  transform: scale(0.8);
+  transition: all 0.5s;
 }
 
 .nav-list--text {
@@ -152,7 +177,7 @@ a:hover {
   display: none;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 1024px) {
   .header-logo {
     padding: 0;
   }
@@ -326,11 +351,55 @@ a:hover {
 
 .product-card__img {
   width: 100%;
+  position: relative;
+  display: inline-block;
+}
+
+.product-card__img a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 2s ease-in-out;
 }
 
 .product-card__img img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  perspective: 1000px;
+}
+
+.product-card__img img:first-child {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.product-card__img img:first-child {
+  opacity: 1;
+}
+
+.product-card__img img:last-child {
+  opacity: 0;
+}
+
+.product-card__img:hover img:first-child {
+  opacity: 0;
+}
+
+.product-card__img:hover img:last-child {
+  opacity: 1;
+}
+
+.product-card__img:hover,
+.product-info__name h3:hover,
+.product-option__item:hover {
+  cursor: pointer;
 }
 
 .product-info {
@@ -406,6 +475,14 @@ a:hover {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+
+.product-option__item {
+  transition: transform 0.5s ease-in-out;
+}
+
+.product-option__item:hover {
+  transform: scale(1.2);
 }
 
 @media (max-width: 572px) {
@@ -494,7 +571,15 @@ a:hover {
   overflow: hidden;
 }
 
-.multi-card__text {
+.multi-card .multi-card__img {
+  transition: transform 0.5s ease-in-out;
+}
+
+.multi-card .multi-card__img:hover {
+  transform: scale(1.3);
+}
+
+.multi-card .multi-card__text {
   display: flex;
   flex-direction: column;
   gap: 450px;
@@ -617,9 +702,15 @@ a:hover {
   object-position: center;
 }
 
+.f-card__image:hover {
+  cursor: pointer;
+}
+
 .f-card__content {
   width: fit-content;
-  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 0 3px;
 }
 
@@ -676,6 +767,7 @@ a:hover {
   background-color: rgb(15, 97, 255);
   border-radius: 6px;
   align-self: flex-end;
+  transition: all 0.3s ease-in-out;
 }
 
 .f-card__button a {
@@ -683,6 +775,19 @@ a:hover {
   width: 100%;
   height: 100%;
   padding: 10px;
+}
+
+.f-card__button:hover {
+  transform: scale(1.1);
+  background-color: rgb(10, 80, 220);
+}
+
+.f-card__button svg {
+  transition: transform 0.3s ease-in-out;
+}
+
+.f-card__button:hover svg {
+  transform: rotate(90deg);
 }
 
 @media (max-width: 992px) {
@@ -886,17 +991,90 @@ a:hover {
   left: 356px;
 }
 
+.review-content__img--active {
+  border-radius: 100px;
+  background: rgba(19, 90, 178, 0.5);
+  box-shadow: 0 0 20px 10px rgba(19, 90, 178, 0.5);
+}
+
+.review-content__text {
+  position: absolute;
+  width: 512px;
+  background: #f6f6f6;
+  border-radius: 20px;
+  padding: 33px 36px 34px 36px;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 13px;
+  top: 20%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.review-content__text.active {
+  display: flex;
+  opacity: 1;
+}
+
+@media (max-width: 768px) {
+  .review__content {
+    padding-bottom: 150px; /* Giảm khoảng cách dưới */
+  }
+  .review-content__img {
+    width: 50px;
+    height: 50px;
+  }
+  .review-content__img img {
+    width: 100%;
+    height: 100%;
+  }
+  .review-content__img--active {
+    width: 80px;
+    height: 80px;
+    box-shadow: 0 0 15px 7px rgba(19, 90, 178, 0.5);
+  }
+  .review-content__text {
+    width: 80%;
+    padding: 15px;
+    font-size: 14px;
+    border-radius: 15px;
+  }
+  .review-content__text p {
+    font-size: 14px;
+  }
+}
+@media (max-width: 390px) {
+  .review-container {
+    padding: 0 22px;
+  }
+  .review-content__img--1 {
+    top: 50px;
+    left: 120px;
+  }
+  .review-content__img--4 {
+    top: 150px;
+    left: 120px;
+  }
+  .review-content__img--3 {
+    top: 120px;
+    left: 20px;
+  }
+  .review-content__img--5 {
+    top: 140px;
+    left: 280px;
+  }
+}
 .cl-container {
   padding: 113px 0;
 }
 
-.cl-card__img {
-  width: 100%;
-}
-
 .cl-card__img img {
   width: 100%;
-  height: 100%;
 }
 
 .cl-card {
@@ -935,7 +1113,12 @@ a:hover {
     margin: auto;
   }
   .cl-card__img img {
-    padding-bottom: 15px;
+    aspect-ratio: 0.8446327684;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  .btn-sa--hidden {
+    display: none;
   }
 }
 footer {
@@ -1298,6 +1481,11 @@ footer {
   padding: 15px 0;
   border-radius: 8px;
   background: #f7f7f8;
+  transition: transform 0.3s ease-in-out;
+}
+
+.cate__item:hover .cate__image {
+  transform: scale(1.2);
 }
 
 .cate__item--active {
@@ -1339,6 +1527,26 @@ footer {
   border: none;
   cursor: pointer;
   border-radius: 50%;
+}
+
+@keyframes moveArrow {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+.cate__button:hover svg path {
+  animation: moveArrow 0.5s infinite ease-in-out;
+}
+
+.previous-button:hover,
+.item:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 576px) {
@@ -1708,6 +1916,30 @@ footer {
   aspect-ratio: 1;
 }
 
+.pi__gallery-main {
+  position: relative;
+  overflow: hidden;
+}
+
+.pi__zoom {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: 250%;
+  background-position: center;
+  display: none;
+}
+
+.pi__gallery-main:hover .pi__zoom {
+  display: block;
+}
+
+.pi__gallery-main:hover .pi__gallery-main-img {
+  opacity: 0;
+}
+
 .pi__gallery-thumbnails {
   display: flex;
   gap: 12px;
@@ -1719,10 +1951,12 @@ footer {
   height: 107px;
   border-radius: 10px;
   background: #d9d9d9;
+  transition: all 0.5s ease;
 }
 
 .pi__gallery-thumbnail:hover {
   cursor: pointer;
+  transform: scale(0.8);
 }
 
 .pi__info {
@@ -1880,6 +2114,11 @@ select option {
   width: 100%;
   height: 100%;
   background-color: white;
+  transition: all 0.5s ease;
+}
+
+.pi__color svg:hover {
+  transform: scale(0.8);
 }
 
 .pi__color:hover {
@@ -1977,6 +2216,30 @@ select option {
   background: white;
 }
 
+.pi__buttons {
+  display: flex;
+  gap: 8px;
+}
+
+.btn--buy-now,
+.btn--add-to-cart {
+  position: relative;
+  border: 1px solid var(--Button-Primary-BG, #0f61ff);
+  border-radius: 100px;
+  transition: background 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.btn--buy-now:hover {
+  background: green;
+}
+
+.btn--add-to-cart:hover {
+  background: #fff;
+  color: green;
+  border: 1px solid green;
+  transform: scale(0.9);
+}
+
 .accordion {
   border-top: 1px solid #e3e5e8;
 }
@@ -2010,6 +2273,17 @@ select option {
   padding-bottom: 12px;
   font-size: 14px;
   color: #4a4a4a;
+}
+
+.accordion__content {
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: height 0.4s ease-out, opacity 0.3s ease-out;
+}
+
+.accordion__item.active .accordion__content {
+  opacity: 1;
 }
 
 .accordion__title {
@@ -2666,10 +2940,10 @@ select option {
 }
 
 .btn-sa--relative a {
-  color: var(--Button-Primary-BG, #0f61ff);
+  color: #0f61ff;
   text-align: center;
-  font-family: var(--Body-font-family, "Be Vietnam Pro");
-  font-size: var(--Body-font-size-body-xS, 14px);
+  font-family: "Be Vietnam Pro";
+  font-size: 14px;
   font-style: normal;
   font-weight: 600;
   line-height: 140%;
@@ -2678,6 +2952,55 @@ select option {
   opacity: 1;
   border-radius: 100px;
   border: 1px solid rgba(15, 97, 255, 0.4);
+}
+
+.btn-sa--relative a {
+  position: relative;
+  overflow: hidden;
+  transition: color 0.4s ease-in-out, border-color 0.4s ease-in-out;
+}
+
+.btn-sa--relative a {
+  position: relative;
+  display: inline-block;
+  color: #0f61ff;
+  text-align: center;
+  font-family: "Be Vietnam Pro";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%;
+  padding: 10px 32.5px;
+  background-color: #fff;
+  opacity: 1;
+  border-radius: 100px;
+  border: 1px solid rgba(15, 97, 255, 0.4);
+  text-decoration: none;
+  transition: color 0.4s ease-in-out, border-color 0.4s ease-in-out;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.btn-sa--relative a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #0f61ff, #0053cc);
+  transition: left 0.4s ease-in-out;
+  z-index: -1;
+  border-radius: 100px;
+}
+
+.btn-sa--relative a:hover {
+  color: #fff;
+  border-color: #0f61ff;
+}
+
+.btn-sa--relative a:hover::before {
+  left: 0;
 }
 
 .recommend__paginations {
