--- a/src/scss/components/featured.scss
+++ b/src/scss/components/featured.scss
@@ -53,9 +53,14 @@
   object-position: center;
 }
 
+.f-card__image:hover {
+  cursor: pointer;
+}
 .f-card__content {
   width: fit-content;
-  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 0 3px;
 }
 
@@ -112,6 +117,7 @@
   background-color: rgba(15, 97, 255, 1);
   border-radius: 6px;
   align-self: flex-end;
+  transition: all 0.3s ease-in-out;
 }
 
 .f-card__button a {
@@ -119,6 +125,19 @@
   width: 100%;
   height: 100%;
   padding: 10px;
+}
+
+.f-card__button:hover {
+  transform: scale(1.1);
+  background-color: rgba(10, 80, 220, 1);
+}
+
+.f-card__button svg {
+  transition: transform 0.3s ease-in-out;
+}
+
+.f-card__button:hover svg {
+  transform: rotate(90deg);
 }
 
 @media (max-width: 992px) {
