--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -26,8 +26,8 @@
   overflow: hidden;
   justify-content: space-between;
   align-items: center;
-  width: 42.55%;
-  height: 70px;
+  min-width: 42.55%;
+  // height: 70px;
   padding: 0 35px;
   border-radius: 54px;
   background-color: $bgColor1;
@@ -63,6 +63,12 @@
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+  position: relative;
+}
+
+.nav-list a:hover {
+  transform: scale(0.8);
+  transition: all 0.5s;
 }
 
 .nav-list--text {
@@ -77,7 +83,7 @@
   display: none;
 }
 
-@media (max-width: 576px) {
+@media (max-width: 1024px) {
   .header-logo {
     padding: 0;
   }
