--- a/src/scss/components/seller-page.scss
+++ b/src/scss/components/seller-page.scss
@@ -38,11 +38,54 @@
 
 .product-card__img {
   width: 100%;
+  position: relative;
+  display: inline-block;
 }
 
+.product-card__img a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 2s ease-in-out;
+}
 .product-card__img img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  perspective: 1000px;
+}
+
+.product-card__img img:first-child {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.product-card__img img:first-child {
+  opacity: 1;
+}
+
+.product-card__img img:last-child {
+  opacity: 0;
+}
+
+.product-card__img:hover img:first-child {
+  opacity: 0;
+}
+
+.product-card__img:hover img:last-child {
+  opacity: 1;
+}
+
+.product-card__img:hover,
+.product-info__name h3:hover,
+.product-option__item:hover {
+  cursor: pointer;
 }
 
 .product-info {
@@ -117,6 +160,12 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+.product-option__item {
+  transition: transform 0.5s ease-in-out;
+}
+.product-option__item:hover {
+  transform: scale(1.2);
 }
 
 @media (max-width: 572px) {
